<resources>
    <string name="app_name">Praca_dyplomowa_27796_android</string>
    <string name="username_text_label">Nazwa użytkownika</string>
    <string name="password_text_label">Hasło</string>
    <string name="name_text_label">Imię</string>
    <string name="client_text_label">Klient</string>
    <string name="surname_text_label">Nazwisko</string>
    <string name="companyName_text_label">Firma</string>
    <string name="street_text_label">Ulica</string>
    <string name="postalCode_text_label">Kod pocztowy</string>
    <string name="city_text_label">Miasto</string>
    <string name="phoneNumber_text_label">Numer telefonu</string>
    <string name="email_text_label">Email</string>
    <string name="subject_text_label">Temat</string>
    <string name="job_type_text_label">Typ zlecenia</string>
    <string name="plannedDate_text_label">Planowana data wykonania</string>
    <string name="plannedTime_text_label">Planowany czas wykonania</string>
    <string name="note_text_label">Notatka</string>
    <string name="isCompleted_text_label">Zakończone</string>
    <string name="search_text_label">Szukaj</string>
    <string name="hours_text_label">Godziny</string>
    <string name="passwordRepeat_text_label">Powtórz hasło</string>
    <string name="timeSpent_text_label">Czas pracy</string>
    <string name="required_text_label">wymagane</string>
    <string name="optional_text_label">opcjonalne</string>
    <string name="login_button_text">Zaloguj</string>
    <string name="register_button_text">Zarejestruj</string>
    <string name="back_button_text">Wróć</string>
    <string name="logout_button_text">Wyloguj</string>
    <string name="save_button_text">Zapisz</string>
    <string name="continue_button_text">Dalej</string>
    <string name="add_client_button_text">Zapisz klienta</string>
    <string name="datepicker_textfield_text">Wybierz datę</string>
    <string name="timepicker_textfield_text">Wybierz czas</string>
    <string name="textview_text_jobs_completed">Liczba zakończonych zleceń:</string>
    <string name="button_text_jobs_completed">Liczba zakończonych zleceń</string>
    <string name="textview_list_jobs_completed">Zakończone zlecenia</string>
    <string name="textview_text_jobs_todo">Liczba zleceń do wykonania:</string>
    <string name="button_text_jobs_todo">Liczba zleceń do wykonania</string>
    <string name="textview_list_jobs_todo">Zlecenia do wykonania</string>
    <string name="textview_list_timeSpent">Godziny pracy w tym miesiącu:</string>
    <string name="button_list_timeSpent">Godziny pracy</string>
    <string name="button_list_timeSpentAdmin">Panel godzin pracy pracowników</string>
    <string name="login_error_info">Podano zły login lub hasło</string>
    <string name="register_error_name_info">Wprowadzone imię jest niepoprawne</string>
    <string name="register_error_surname_info">Wprowadzone nazwisko jest niepoprawne</string>
    <string name="register_error_username_info">Wprowadzona nazwa użytkownika jest niepoprawna</string>
    <string name="register_error_usernameExists_info">Podana nazwa użytkownika jest zajęta</string>
    <string name="register_error_password_info">Hasło jest za słabe</string>
    <string name="register_error_passwordReapeat_info">Hasło nie jest takie samo</string>
    <string name="error_empty_info">Pole nie może być puste</string>
    <string name="error_short_empty_info">Puste pole</string>
    <string name="error_timeSpentZero_info">Podany błędny czas</string>
    <string name="error_name_surname_validator_info">Wprowadzono niepoprawne dane</string>
    <string name="error_postalcode_validator_info">Zły format</string>
    <string name="menu_item_jobs">Zlecenia</string>
    <string name="menu_item_calendar">Kalendarz</string>
    <string name="menu_item_profile">Profil</string>
    <string name="timepicker_colon">:</string>
    <string name="checkbox_text_label">Wykonano</string>
    <string name="dialog_text_title">Przydziel pracowników</string>
    <string name="dialog_message_title">Czy chcesz zapisać? Możesz również przydzielić pracowników</string>
    <string name="dialog_addjob_positive_title">Zapisz</string>
    <string name="dialog_addjob_neutral_title">Przydziel</string>
    <string name="dialog_addjob_negative_title">Wróć</string>
    <string name="dialog_joblist_negative_title">Usuń zlecenie</string>
    <string name="dialog_joblist_positive_title">Przydziel pracowników</string>
    <string name="dialog_joblist_neutral_title">Wróć</string>
    <string name="dialog_joblist_text_title">Wybierz</string>
    <string name="dialog_joblist_text_message">Wybierz co chcesz zrobić</string>
    <string name="dialog_clients_text_message">Wybierz co chcesz zrobić</string>
    <string name="dialog_clients_positive_title">Edytuj klienta</string>
    <string name="dialog_clients_negative_title">Usuń klienta</string>
    <string name="dialog_clients_neutral_title">Wróć</string>
    <string name="dialog_error_text_title">Wystąpił błąd</string>
    <string name="dialog_error_text_message">Wystąpił błąd, sprawdź swoje połączenie z internetem i spróbuj ponownie. Jeśli problem wciąż występuje skontaktuj się z administratorem</string>
    <string name="dialog_delete_error_text_message">Nie można usunąć klienta który jest przydzielony do co najmniej jednego zlecenia</string>
    <string name="dialog_error_positive_title">OK</string>
    <string-array name="job_types_dropdown">
        <item>Budowa</item>
        <item>Remont</item>
        <item>Malowanie</item>
        <item>Inne</item>
    </string-array>
</resources>