<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProfileFragmentView">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="15dp"
        android:translationZ="10dp" />

    <Button
        android:id="@+id/buttonLogoutMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/logout_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameProfileFragmentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSurnameProfileFragmentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameProfileFragmentView" />

    <TextView
        android:id="@+id/textViewJobsCompletedTextProfileFragmentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:text="@string/textview_text_jobs_completed"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSurnameProfileFragmentView" />

    <TextView
        android:id="@+id/textViewJobsCompletedNumberTextProfileFragmentView"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="\?"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewJobsCompletedTextProfileFragmentView"
        app:layout_constraintStart_toEndOf="@+id/textViewJobsCompletedTextProfileFragmentView" />

    <Button
        android:id="@+id/buttonJobsCompletedProfileFragmentView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_text_jobs_completed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJobsCompletedTextProfileFragmentView" />


    <TextView
        android:id="@+id/textViewJobsTodoTextProfileFragmentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview_text_jobs_todo"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJobsCompletedProfileFragmentView" />

    <TextView
        android:id="@+id/textViewJobsTodoNumberTextProfileFragmentView"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="\?"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewJobsTodoTextProfileFragmentView"
        app:layout_constraintStart_toEndOf="@+id/textViewJobsTodoTextProfileFragmentView" />

    <Button
        android:id="@+id/buttonJobsTodoProfileFragmentView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_text_jobs_todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJobsTodoTextProfileFragmentView" />

    <TextView
        android:id="@+id/textViewJobsTimeSpentProfileFragmentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview_list_timeSpent"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJobsTodoProfileFragmentView" />

    <TextView
        android:id="@+id/textViewJobsTimeSpentNumberTextProfileFragmentView"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="\?"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewJobsTimeSpentProfileFragmentView"
        app:layout_constraintStart_toEndOf="@+id/textViewJobsTimeSpentProfileFragmentView" />

    <Button
        android:id="@+id/buttonJobsTimeSpentProfileFragmentView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_list_timeSpent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJobsTimeSpentProfileFragmentView" />

    <Button
        android:id="@+id/buttonJobsTimeSpentAdminProfileFragmentView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_list_timeSpentAdmin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJobsTimeSpentProfileFragmentView" />

</androidx.constraintlayout.widget.ConstraintLayout>