<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:clickable="true"
    tools:context=".views.JobClientAddFragmentView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutCompanyNameClientAddFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/companyName_text_label"
        app:helperText="@string/optional_text_label"
        app:helperTextTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldCompanyNameClientAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutNameClientAddFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name_text_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutCompanyNameClientAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldNameClientAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutSurnameClientAddFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/surname_text_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutNameClientAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldSurnameClientAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutStreetClientAddFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/street_text_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutSurnameClientAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldStreetClientAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutPostalCodeClientAddFragment"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:hint="@string/postalCode_text_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutStreetClientAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldPostalCodeClientAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="6"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutCityClientAddFragment"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/city_text_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFieldLayoutPostalCodeClientAddFragment"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutStreetClientAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldCityClientAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutPhoneNumberClientAddFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/phoneNumber_text_label"
        app:helperText="@string/optional_text_label"
        app:helperTextTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutCityClientAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldPhoneNumberClientAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutEmailClientAddFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email_text_label"
        app:helperText="@string/optional_text_label"
        app:helperTextTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutPhoneNumberClientAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldEmailClientAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAddClientAddClientFragment"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/add_client_button_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutEmailClientAddFragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>