<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewJobAddFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="?android:attr/colorBackground"
    tools:context=".views.JobAddFragmentView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutSubjectJobAddFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/subject_text_label"
        app:helperText="@string/required_text_label"
        app:helperTextTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldSubjectJobAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutJobTypeJobAddFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/job_type_text_label"
        app:helperText="@string/required_text_label"
        app:helperTextTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutSubjectJobAddFragment"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/textFieldDropdownJobTypeJobAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/job_types_dropdown" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutClientJobAddFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/client_text_label"
        app:helperText="@string/required_text_label"
        app:helperTextTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutJobTypeJobAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldClientJobAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:cursorVisible="false"
            android:enabled="true"
            android:focusable="false"
            android:longClickable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutNoteJobAddFragment"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/note_text_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutClientJobAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldNoteJobAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollbars="vertical" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutPlannedDateJobAddFragment"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/plannedDate_text_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutNoteJobAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldPlannedDateJobAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:enabled="true"
            android:focusable="false"
            android:longClickable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayoutTimeSpentJobAddFragment"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:hint="@string/timeSpent_text_label"
        app:helperTextTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/checkboxIsCompletedJobAddFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutPlannedDateJobAddFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldTimeSpentJobAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkboxIsCompletedJobAddFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/checkbox_text_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/textFieldLayoutTimeSpentJobAddFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFieldLayoutTimeSpentJobAddFragment" />

    <Button
        android:id="@+id/buttonSaveJobJobAddFragment"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/save_button_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayoutTimeSpentJobAddFragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>